# Soul-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.adoc  README.md  conanfile.py  pyproject.toml
Examples/: CMakeLists.txt
Examples/SoulInfo/: CMakeLists.txt
Examples/SoulInfo/Source/: SoulInfo.h
Source/Audio/Interface/: AudioModule.cpp
Source/Composition/Entity/: CMakeLists.txt
Source/Composition/Entity/Interface/: Entity.h  EntityModule.cpp  EntityModule.h
Source/Composition/Entity/Modules/Synodic/: CMakeLists.txt
Source/Composition/Event/: CMakeLists.txt
Source/Composition/Event/Modules/Default/: CMakeLists.txt
Source/Composition/Event/Modules/Synodic/: CMakeLists.txt
Source/Compute/: CMakeLists.txt
Source/Compute/Modules/CPU/: CMakeLists.txt
Source/Compute/Modules/CUDA/: CMakeLists.txt
Source/Compute/Modules/OpenCL/: CMakeLists.txt
Source/Core/: CMakeLists.txt
Source/Core/Geometry/: BoundingBox.h  Face.h  Tet.h
Source/Core/Interface/Acceleration/: LBVHManager.h
Source/Core/Interface/Geometry/: BoundingBox.h  Face.h  Tet.h
Source/Core/Interface/Interface/Module/: Module.h
Source/Core/Interface/Structure/Acceleration/: Node.h
Source/Core/Modules/Synodic/: CMakeLists.txt
Source/Display/GUI/: CMakeLists.txt
Source/Display/GUI/Modules/Imgui/: CMakeLists.txt
Source/Display/Input/: CMakeLists.txt
Source/Display/Input/Modules/GLFW/: CMakeLists.txt
Source/Display/Window/: CMakeLists.txt
Source/Display/Window/Interface/: WindowModule.h
Source/Display/Window/Modules/GLFW/: CMakeLists.txt
Source/Memory/: CMakeLists.txt
Source/Memory/Modules/Linear/: CMakeLists.txt
Source/Memory/Modules/Tagged/: CMakeLists.txt
Source/Memory/Modules/Tagged/Source/: TaggedAllocator.h
Source/Parallelism/Graph/: CMakeLists.txt
Source/Parallelism/Graph/Modules/Synodic/: CMakeLists.txt
Source/Parallelism/Scheduler/: CMakeLists.txt
Source/Parallelism/Scheduler/Modules/Dispatch/: CMakeLists.txt
Source/Parallelism/Scheduler/Modules/Fiber/: CMakeLists.txt
Source/Ray/Sensor/Modules/Projection/: CMakeLists.txt
Source/Ray/Tracer/: CMakeLists.txt
Source/Ray/Tracer/Modules/Synodic/: CMakeLists.txt
Source/Render/Raster/: CMakeLists.txt
Source/Render/Raster/Modules/Vulkan/: CMakeLists.txt
Source/Render/RenderGraph/: CMakeLists.txt
Source/Render/RenderGraph/Interface/: RenderGraphParameters.h
Source/Render/RenderGraph/Modules/Synodic/: CMakeLists.txt
Source/Thread/Scheduler/: CMakeLists.txt
Source/Thread/Scheduler/Modules/Dispatch/: CMakeLists.txt
Source/Thread/Scheduler/Modules/Fiber/: CMakeLists.txt
Source/Thread/Scheduler/Modules/Fiber/Source/: FiberSchedulerBackend.h
Source/Tracer/RayScheduler/: CMakeLists.txt
Source/Tracer/RayScheduler/Modules/Synodic/: CMakeLists.txt
Source/Tracer/Sensor/: CMakeLists.txt
Source/Transput/Log/: CMakeLists.txt
Source/Transput/Observer/: CMakeLists.txt  ObserverModule.cpp  ObserverModule.h
Source/Transput/Observer/Modules/Poll/: PollObserverModule.cpp  PollObserverModule.h
Source/Transput/Observer/Modules/Windows/: WindowsObserverModule.cpp  WindowsObserverModule.h
Source/Transput/Resource/: CMakeLists.txt
Source/Transput/Resource/Modules/Shader/: CMakeLists.txt
Source/Transput/Resource/Modules/Shader/Modules/SPIRV/: CMakeLists.txt
Tests/: CMakeLists.txt
Tools/CMake/: Module.cmake
Tools/Conan/: conanfile.py
Tools/Python/: Scripts.py  Setup.py  Update.py  Utilities.py
examples/SoulInfo/src/: SoulInfo.cpp  SoulInfo.h
src/: soul.cpp  soul.h
tests/src/unit/: test_soul.cpp
